--- a/inc/azure/helpers/vm_config.yaml
+++ b/inc/azure/helpers/vm_config.yaml
@@ -1,3 +1,11 @@
+- name: Install package dependencies
+  win_chocolatey:
+    name:
+      - chocolatey-core.extension
+      - chocolatey-windowsupdate.extension
+      - 7zip.install
+    state: present
+
 - name: Uninstall Windows Defender
   ansible.windows.win_feature:
     name: Windows-Defender
@@ -8,14 +16,3 @@
 - name: Reboot if uninstalling Windows-Defender feature requires it
   ansible.windows.win_reboot:
   when: win_feature_wd.reboot_required
-
-# - name: Install package dependencies
-#   win_chocolatey:
-#     name:
-#       - chocolatey-core.extension
-#       - chocolatey-windowsupdate.extension
-#     state: present
-
-# - name: Install Azure Cli
-#   win_chocolatey:
-#     name: azure-cli
