--- a/inc/azure/helpers/vm_datadisk_format.yaml
+++ b/inc/azure/helpers/vm_datadisk_format.yaml
@@ -9,6 +9,6 @@
 
 - name: Format the partition as NTFS and label it
   win_format:
-    drive_letter: "M"
+    drive_letter: "{{ azure_datadisk_drive }}"
     file_system: NTFS
     new_label: Data
