--- a/inc/cef/helpers/cefsetup.yaml
+++ b/inc/cef/helpers/cefsetup.yaml
@@ -4,9 +4,9 @@
 
 - name: Create Directories
   win_shell: |
-    New-Item -Force -Path m:\code\automate -ItemType Directory
-    New-Item -Force -Path m:\code\chromium_git -ItemType Directory
-    New-Item -Force -Path m:\code\depot_tools -ItemType Directory
+    New-Item -Force -Path {{ azure_datadisk_drive }}:\code\automate -ItemType Directory
+    New-Item -Force -Path {{ azure_datadisk_drive }}:\code\chromium_git -ItemType Directory
+    New-Item -Force -Path {{ azure_datadisk_drive }}:\code\depot_tools -ItemType Directory
 
 - name: Download depot tools
   win_get_url:
@@ -16,41 +16,41 @@
 - name: Install depot tools
   community.windows.win_unzip:
     src: '%TEMP%\depot_tools.zip'
-    dest: m:\code\depot_tools
+    dest: "{{ azure_datadisk_drive }}:\\code\\depot_tools"
 
 - name: Update depot tools
   win_command: update_depot_tools.bat
   args:
-    chdir: m:\code\depot_tools
+    chdir: "{{ azure_datadisk_drive }}:\\code\\depot_tools"
 
 - name: Add depot_tools to path
   ansible.windows.win_path:
     elements:
-    - 'm:\code\depot_tools'
+    - '{{ azure_datadisk_drive }}:\\code\\depot_tools'
 
 - name: Download automate-git
   win_get_url:
     url: https://bitbucket.org/chromiumembedded/cef/raw/master/tools/automate/automate-git.py
-    dest: m:\code\automate\automate-git.py
+    dest: "{{ azure_datadisk_drive }}:\\code\\automate\automate-git.py"
 
 - name: Create update.bat
   ansible.windows.win_copy:
-    dest: m:\code\chromium_git\update.bat
+    dest: "{{ azure_datadisk_drive }}:\\code\\chromium_git\\update.bat"
     content: |
       set CEF_USE_GN=1
       set GN_DEFINES={{ cef_gn_defines }}
       set GYP_MSVS_VERSION={{ vs_version }}
       set GN_ARGUMENTS=--ide=vs{{ vs_version }} --sln=cef --filters=//cef/*
-      python ..\automate\automate-git.py --download-dir=m:\code\chromium_git --depot-tools-dir=m:\code\depot_tools --no-depot-tools-update --no-distrib --no-build --branch={{ cef_branch }}
+      python ..\automate\automate-git.py --download-dir={{ azure_datadisk_drive }}:\code\chromium_git --depot-tools-dir={{ azure_datadisk_drive }}:\code\depot_tools --no-depot-tools-update --no-distrib --no-build --branch={{ cef_branch }}
 
 - name: Run update.bat
   win_command: update.bat
   args:
-    chdir: m:\code\chromium_git
+    chdir: "{{ azure_datadisk_drive }}:\\code\\chromium_git"
 
 - name: Create create.bat
   ansible.windows.win_copy:
-    dest: m:\code\chromium_git\chromium\src\cef\create.bat
+    dest: "{{ azure_datadisk_drive }}:\\code\\chromium_git\\chromium\\src\\cef\\create.bat"
     content: |
       set CEF_USE_GN=1
       set GYP_MSVS_VERSION={{ vs_version }}
@@ -61,4 +61,4 @@
 - name: Run create.bat
   win_command: create.bat
   args:
-    chdir: m:\code\chromium_git\chromium\src\cef
+    chdir: "{{ azure_datadisk_drive }}:\\code\\chromium_git\\chromium\\src\\cef"
